fix: text clearer on mobile

--- a/css/winners.css
+++ b/css/winners.css
@@ -6,6 +6,7 @@
 html, body {
     padding: 0;
     margin: 0;
+    min-height: 100vh;
     width: 100%;
     height: 100%;
 }
@@ -29,6 +30,12 @@ body {
     justify-content: center;
     flex-direction: column;
     min-height: 100vh;
+}
+
+@media screen and (max-width: 769px) {
+    .container {
+        background: rgba(0,0,0,0.5);
+    }
 }
 
 iframe {
